# brave

./: .dockerignore  Caddyfile  Dockerfile  Jenkinsfile  Pipfile  README.md  brave.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker_build.yml
brave/api/: __init__.py
brave/inputs/: html.py
brave/outputs/: file.py  kvs.py  rtmp.py  tcp.py  webrtc.py
docs/: api.md  install_ubuntu.md
gst-WebRenderSrc/: CMakeLists.txt
gst-WebRenderSrc/cmake/: DownloadCEF.cmake
gst-WebRenderSrc/src/: CMakeLists.txt  cef_bridge.cpp  cef_bridge.h  cef_subprocess.cpp  gstwebrendersrc.c  gstwebrendersrc.h
gst-WebRenderSrc/src/cef/: Browser.cpp  Browser.h  Client.cpp  Client.h
